infra/observability/ingress-obs.yaml
# ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-grafana-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /grafana
    forceSlash: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-observability-routes
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/grafana`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
